# dkvac

./: .gitignore  Cargo.toml  README.md
dkvac_core/: Cargo.toml
dkvac_core/benches/: dkvac_bench.rs  run-10-june-2026-13:30
dkvac_core/src/: error.rs  group.rs  instantiation1.rs  instantiation2.rs  lib.rs  proof.rs  size.rs  zk.rs
