[package]
name = "dkvac_core"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = { version = "4", features = ["rand_core", "serde"] }
rand_core = "0.6"
rand_chacha = "0.3"
sha2 = "0.10"
merlin = "3"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
